--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ app/storage/
 # Laravel 5 & Lumen specific
 public/storage
 public/hot
+public/build
+public/storage
 
 # Laravel 5 & Lumen specific with changed public path
 public_html/storage
@@ -17,7 +19,16 @@ public_html/hot
 
 storage/*.key
 .env
+.env.backup
+.env.production
 Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+.phpunit.cache
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
